--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ a {
   width: 100%;
   height: 100vh;
   position: fixed;
-  /* z-index: 2; */
+  z-index: -1;
 }
 .effect1 {
   position: absolute;
